--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -21,6 +21,7 @@
         android:textColor="@color/colorRed"
         android:textSize="18sp"
         android:textStyle="normal"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/btn_next"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
