Perbaikan pada desain UI

--- a/app/src/main/res/layout/activity_confirm_final_order.xml
+++ b/app/src/main/res/layout/activity_confirm_final_order.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/btn_background_1"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
         android:text="purchase"
         android:textColor="@color/colorPrimaryWhite"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -28,9 +28,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
         android:text="Shipment"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorBlack"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
-                android:fontFamily="@font/righteous"
+                android:fontFamily="@font/montserrat"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="14sp"
                 android:textStyle="normal"
@@ -76,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                android:fontFamily="@font/righteous"
+                android:fontFamily="@font/montserrat"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="14sp"
                 android:textStyle="normal"
@@ -92,7 +92,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="16dp"
-                android:fontFamily="@font/righteous"
+                android:fontFamily="@font/montserrat"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="14sp"
                 android:textStyle="normal"
@@ -106,7 +106,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:fontFamily="@font/righteous"
+                android:fontFamily="@font/montserrat_bold"
                 android:text="Address"
                 android:textColor="@color/colorBlack"
                 android:textSize="18sp"
@@ -148,7 +148,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:fontFamily="@font/righteous"
+                android:fontFamily="@font/montserrat"
                 android:text="JNE Reguler (3 - 4 hari)"
                 android:textColor="@color/colorYellow"
                 android:textSize="20sp"
@@ -163,7 +163,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginBottom="8dp"
-                android:fontFamily="@font/righteous"
+                android:fontFamily="@font/montserrat"
                 android:text="Total Price"
                 android:textColor="@color/colorBlack"
                 android:textSize="16sp"
@@ -177,7 +177,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
-                android:fontFamily="@font/righteous"
+                android:fontFamily="@font/montserrat"
                 android:gravity="right"
                 android:text="IDR 0"
                 android:textColor="@color/colorRed"
@@ -192,7 +192,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="10dp"
-                android:fontFamily="@font/righteous"
+                android:fontFamily="@font/montserrat_bold"
                 android:text="Shipment Type"
                 android:textColor="@color/colorBlack"
                 android:textSize="18sp"
