--- a/app/src/main/res/layout/activity_overview_user_order.xml
+++ b/app/src/main/res/layout/activity_overview_user_order.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/btn_background_1"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
         android:text="confirm"
         android:textColor="@color/colorPrimaryWhite"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -28,9 +28,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
+        android:shadowColor="@color/colorBlack"
         android:text="Overview Order"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorBlack"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +61,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
-                android:fontFamily="@font/righteous"
+                android:fontFamily="@font/montserrat"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="14sp"
                 android:textStyle="normal"
@@ -76,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                android:fontFamily="@font/righteous"
+                android:fontFamily="@font/montserrat"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="14sp"
                 android:textStyle="normal"
@@ -92,7 +93,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="16dp"
-                android:fontFamily="@font/righteous"
+                android:fontFamily="@font/montserrat"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="14sp"
                 android:textStyle="normal"
@@ -106,7 +107,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:fontFamily="@font/righteous"
+                android:fontFamily="@font/montserrat_bold"
                 android:text="Address"
                 android:textColor="@color/colorBlack"
                 android:textSize="18sp"
@@ -148,7 +149,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:fontFamily="@font/righteous"
+                android:fontFamily="@font/montserrat"
                 android:text="JNE Reguler (3 - 4 hari)"
                 android:textColor="@color/colorYellow"
                 android:textSize="20sp"
@@ -163,7 +164,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="10dp"
-                android:fontFamily="@font/righteous"
+                android:fontFamily="@font/montserrat_bold"
                 android:text="Shipment Type"
                 android:textColor="@color/colorBlack"
                 android:textSize="18sp"
