--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="@color/colorYellow"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:gravity="center"
         android:text="pesan"
         android:textColor="@color/colorRed"
@@ -42,7 +42,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
         android:text="Product Name"
         android:textColor="@color/colorBlack"
         android:textSize="18sp"
@@ -58,7 +58,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="24dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:text="Product Name"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="14sp"
@@ -74,7 +74,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="24dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:text="Rp. 5000,00"
         android:textColor="@color/colorYellow"
         android:textSize="14sp"
@@ -108,7 +108,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/btn_background_1"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
         android:text="Add to cart"
         android:textColor="@color/colorPrimaryWhite"
         app:layout_constraintBottom_toBottomOf="parent"
