--- a/app/src/main/res/layout/activity_verify_phone.xml
+++ b/app/src/main/res/layout/activity_verify_phone.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
         android:text="Verify Phone No"
         android:textColor="@color/colorBlack"
         android:textSize="30sp"
@@ -43,7 +43,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
         android:background="@drawable/btn_background_1"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
         android:text="Verify"
         android:textColor="@color/colorPrimaryWhite"
         android:textSize="16sp"
@@ -61,7 +61,7 @@
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/colorPrimaryDark"
         android:ems="10"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:hint="enter OTP"
         android:inputType="number"
         android:textColor="@color/colorPrimaryDark"
