--- a/app/src/main/res/layout/product_admin_items_layout.xml
+++ b/app/src/main/res/layout/product_admin_items_layout.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
         android:text="product name"
         android:textColor="@color/colorBlack"
         android:textSize="16sp"
@@ -46,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:text="category name"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintStart_toEndOf="@+id/cardViewProduct"
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="8dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:text="IDR 70.000"
         android:textAlignment="textEnd"
         android:textColor="@color/colorYellow"
