--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorPrimaryWhite">#FFFCFC</color>
     <color name="colorBlue">#5AAAE7</color>
     <color name="colorYellow">#FFC078</color>
+    <color name="colorYellowLight">#FFFBE9</color>
     <color name="colorRed">#F73C4F</color>
     <color name="colorBlack">#0F1817</color>
     <color name="colorGrey1">#80AAAA</color>
