--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:gravity="center"
         android:text="Select Image"
         android:textColor="@color/colorYellow"
@@ -28,7 +28,7 @@
         android:layout_height="47dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:gravity="center"
         android:text="categoryName"
         android:textColor="@color/colorRed"
@@ -42,7 +42,7 @@
         android:layout_height="47dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:gravity="center"
         android:text="Category : "
         android:textSize="18sp"
@@ -57,7 +57,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/btn_background_1"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
         android:text="Upload Product"
         android:textColor="@color/colorPrimaryWhite"
         android:textSize="16sp"
@@ -75,7 +75,7 @@
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/colorPrimaryDark"
         android:ems="10"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:hint="Price"
         android:inputType="number"
         android:textColor="@color/colorPrimaryDark"
@@ -94,7 +94,7 @@
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/colorPrimaryDark"
         android:ems="10"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:hint="Description"
         android:inputType="textPersonName"
         android:textColor="@color/colorPrimaryDark"
@@ -111,7 +111,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
         android:gravity="center"
         android:text="Product Detail"
         android:textColor="@color/colorBlack"
@@ -142,7 +142,7 @@
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/colorPrimaryDark"
         android:ems="10"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:hint="Product name"
         android:inputType="textPersonName"
         android:textColor="@color/colorPrimaryDark"
@@ -159,7 +159,7 @@
         android:layout_height="47dp"
         android:layout_marginStart="25dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:gravity="center"
         android:text="Rp"
         android:textSize="18sp"
