--- a/app/src/main/res/layout/activity_admin_home.xml
+++ b/app/src/main/res/layout/activity_admin_home.xml
@@ -42,7 +42,7 @@
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/ic_delivery_truck" />
+            app:srcCompat="@drawable/ic_order" />
 
 
         <ImageView
@@ -50,7 +50,7 @@
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/ic_profile" />
+            app:srcCompat="@drawable/ic_cart" />
     </LinearLayout>
 
 
