--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,7 +21,7 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="55dp"
         android:background="@color/colorGrey2"
         android:gravity="center"
         android:orientation="horizontal"
@@ -34,35 +34,28 @@
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/ic_home" />
-
-        <ImageView
-            android:id="@+id/iv_category"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/ic_category" />
+            app:srcCompat="@drawable/ic_home_active" />
 
         <ImageView
             android:id="@+id/iv_order"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/ic_delivery_truck" />
+            app:srcCompat="@drawable/ic_order" />
 
         <ImageView
             android:id="@+id/iv_cart"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/ic_shopping_cart" />
+            app:srcCompat="@drawable/ic_cart" />
 
         <ImageView
             android:id="@+id/iv_setting"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/ic_profile" />
+            app:srcCompat="@drawable/ic_profil" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
