--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,8 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/righteous"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/montserrat_bold"
         android:text="I'm User"
         android:textColor="@color/colorYellow"
         android:textSize="18sp"
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="16dp"
         android:backgroundTint="@color/colorPrimaryDark"
         android:ems="10"
         android:fontFamily="@font/righteous"
@@ -56,14 +56,16 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="104dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/righteous"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="@font/montserrat_bold"
         android:text="@string/common_signin_button_text"
         android:textColor="@color/colorBlack"
         android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
@@ -71,9 +73,9 @@
         android:id="@+id/forgot_pwd_link"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:gravity="center"
         android:text="Forgot number?"
         android:textColor="#80AAAA"
@@ -84,11 +86,11 @@
         android:id="@+id/btn_login"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/btn_background_1"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
         android:text="@string/common_signin_button_text"
         android:textColor="@color/colorPrimaryWhite"
         android:textSize="16sp"
@@ -101,10 +103,10 @@
         android:id="@+id/textView7"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="64dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:gravity="center"
         android:text="+62"
         android:textSize="18sp"
@@ -119,7 +121,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
         android:text="I'm Seller"
         android:textColor="@color/colorYellow"
         android:textSize="18sp"
