--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
         android:text="I'm User"
         android:textColor="@color/colorYellow"
         android:textSize="18sp"
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
         android:text="I'm Seller"
         android:textColor="@color/colorYellow"
         android:textSize="18sp"
@@ -55,7 +55,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/btn_background_1"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
         android:text="create account"
         android:textColor="@color/colorPrimaryWhite"
         android:textSize="16sp"
@@ -71,7 +71,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
         android:text="Create Account..."
         android:textColor="@color/colorBlack"
         android:textSize="30sp"
@@ -88,7 +88,7 @@
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/colorPrimaryDark"
         android:ems="10"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:hint="full name"
         android:inputType="textPersonName"
         android:textColor="@color/colorPrimaryDark"
@@ -108,7 +108,7 @@
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/colorPrimaryDark"
         android:ems="10"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:hint="username"
         android:inputType="textPersonName"
         android:textColor="@color/colorPrimaryDark"
@@ -126,7 +126,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:gravity="center"
         android:text="+62"
         android:textSize="18sp"
@@ -145,7 +145,7 @@
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/colorPrimaryDark"
         android:ems="10"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:hint="phone"
         android:inputType="number|phone"
         android:textColor="@color/colorPrimaryDark"
@@ -164,7 +164,7 @@
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/colorPrimaryDark"
         android:ems="10"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:hint="email"
         android:inputType="textPersonName"
         android:textColor="@color/colorPrimaryDark"
@@ -184,7 +184,7 @@
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/colorPrimaryDark"
         android:ems="10"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:hint="password (min 8 character)"
         android:inputType="textPassword"
         android:textColor="@color/colorPrimaryDark"
