--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/colorPrimaryDark"
         android:ems="10"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:hint="email"
         android:inputType="textPersonName"
         android:textColor="@color/colorPrimaryDark"
@@ -34,7 +34,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/btn_background_3"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
         android:text="Change Phone number"
         android:textColor="@color/colorPrimaryWhite"
         android:textSize="16sp"
@@ -52,7 +52,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/btn_background_1"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
         android:text="Save Update"
         android:textColor="@color/colorPrimaryWhite"
         android:textSize="16sp"
@@ -70,7 +70,7 @@
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/colorPrimaryDark"
         android:ems="10"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:hint="password (min 8 character)"
         android:inputType="textPassword"
         android:textColor="@color/colorPrimaryDark"
@@ -90,7 +90,7 @@
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/colorPrimaryDark"
         android:ems="10"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:hint="address"
         android:inputType="textPersonName"
         android:textColor="@color/colorPrimaryDark"
@@ -110,7 +110,7 @@
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/colorPrimaryDark"
         android:ems="10"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:hint="username"
         android:inputType="textPersonName"
         android:textColor="@color/colorPrimaryDark"
@@ -129,7 +129,7 @@
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/colorPrimaryDark"
         android:ems="10"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:hint="full name"
         android:inputType="textPersonName"
         android:textColor="@color/colorPrimaryDark"
@@ -158,10 +158,10 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
         android:gravity="center"
         android:text="Update Profile"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorBlack"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
