--- a/app/src/main/res/layout/admin_order_items_layout.xml
+++ b/app/src/main/res/layout/admin_order_items_layout.xml
@@ -28,7 +28,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/btn_background_1"
-                android:fontFamily="@font/righteous"
+                android:fontFamily="@font/montserrat_bold"
                 android:text="detail"
                 android:textColor="@color/colorPrimaryWhite"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:fontFamily="@font/righteous"
+                android:fontFamily="@font/montserrat"
                 android:text="Username"
                 android:textColor="@color/colorBlack"
                 android:textSize="16sp"
@@ -55,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:fontFamily="@font/righteous"
+                android:fontFamily="@font/montserrat"
                 android:text="phone"
                 android:textAlignment="textEnd"
                 android:textColor="@color/colorPrimaryDark"
@@ -69,7 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:fontFamily="@font/righteous"
+                android:fontFamily="@font/montserrat"
                 android:text="Date"
                 android:textColor="@color/colorRed"
                 android:textSize="14sp"
@@ -82,7 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:fontFamily="@font/righteous"
+                android:fontFamily="@font/montserrat"
                 android:text="Time"
                 android:textColor="@color/colorRed"
                 android:textSize="14sp"
