--- a/app/src/main/res/layout/detail_order_items_layout.xml
+++ b/app/src/main/res/layout/detail_order_items_layout.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
         android:text="product name"
         android:textColor="@color/colorBlack"
         android:textSize="16sp"
@@ -44,11 +44,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:text="X 5"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintStart_toEndOf="@+id/cardViewAdmin"
-        app:layout_constraintTop_toBottomOf="@+id/tv_productName_cartAdmin"/>
+        app:layout_constraintTop_toBottomOf="@+id/tv_productName_cartAdmin" />
 
     <TextView
         android:id="@+id/tv_price_cartAdmin"
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="8dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:text="IDR 70.000"
         android:textAlignment="textEnd"
         android:textColor="@color/colorYellow"
@@ -64,7 +64,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cardViewAdmin"
-        app:layout_constraintTop_toBottomOf="@+id/tv_quantity_cartAdmin"/>
+        app:layout_constraintTop_toBottomOf="@+id/tv_quantity_cartAdmin" />
 
 
 
