--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="@color/colorYellow"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat"
         android:gravity="center"
         android:text="pesan"
         android:textColor="@color/colorRed"
@@ -32,9 +32,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
         android:text="Checkout"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorBlack"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +48,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/btn_background_1"
-        android:fontFamily="@font/righteous"
+        android:fontFamily="@font/montserrat_bold"
         android:text="Next"
         android:textColor="@color/colorPrimaryWhite"
         app:layout_constraintBottom_toBottomOf="parent"
